# gemini-3h-slash

./: Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs  types.rs
